@@ -179,7 +179,7 @@ bytecode_modules := $(o_files) $(cmo_files)
 
 native_modules := $(o_files) $(cmx_files)
 
-directories := $(addprefix $(ROOTDIR)/,utils bytecomp parsing \
+directories := $(addprefix $(ROOTDIR)/,runtime utils bytecomp parsing \
                                        compilerlibs file_formats)
 
 include_directories := $(addprefix -I , $(directories))
